# arnoldi-py

./: LICENSE  Makefile  README.md  pyproject.toml  test-arnoldi.py
.github/workflows/: test.yml
notebooks/: Arnoldi-based algos.ipynb
scripts/: INSTALL_SLEPC.md  benchmark-partial-schur.py  compare-against-arpack.py  compare-against-slepc.py  download_matrices.sh  plot-stress-test.py  stress-test.py  test-slepc.py  utils.py
src/arnoldi/: __init__.py  decomposition.py  explicit_restarts.py  krylov_schur.py  matrices.py  ortho.py  utils.py
tests/: common.py  test_decomposition.py  test_explicit_restarts.py  test_krylov_schur.py  test_matrices.py  test_utils.py
