[project]
name = "arnoldi"
description = "A Krylov-Schur implementation of eigensolver for sparse matrices"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "David Cournapeau", email = "cournape@gmail.com" }
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.15.3",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/arnoldi/_version.py"

[dependency-groups]
dev = [
    "notebook>=7.4.2",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "pytest-rerunfailures>=15.1",
]

[tool.pytest.ini_options]
addopts = "--cov=arnoldi --cov-report=term-missing --cov-branch"
